src/components/Pane.css
.slide {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.card {
  width: 90vh;
  height: 90vh;
  display: flex;
  background: #fff;
  
}
.card-img {
  background-position: center;
  width: 100%;
  height: 100%;
  background-size: cover;
  background-repeat: no-repeat;
}

#img1 {
  min-height: 100%;
  background-image: url("https://images.pexels.com/photos/1367192/pexels-photo-1367192.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
}

.card-content {
  padding: 10% 5%;
  box-sizing: border-box;
  width: 50%;
  background: #1b1b1b;
}
.card-theme {
  font-weight: 900;
  font-size: 1.7vmin;
  text-transform: uppercase;
  font-family: Poppins;
  letter-spacing: 10px;
  color: grey;
}
.card-header {
  font-weight: 700;
  font-size: 54px;
  text-transform: capitalize;
  line-height: 1;
  margin: 3vmin 0 3.5vmin;
  margin-top: 50px;
  font-family: Poppins;
  color: #fff;
}
.card-paragraph {
  font-size: 1.6vmin;
  line-height: 1.8;
  font-weight: 300;
  margin-bottom: 2.5vmin;
  color: #fff;
  font-family: Poppins;
}
.card-link {
  color: #fff;
  font-family: Poppins;
  font-size: 1.8vmin;
  display: block;
  cursor: pointer;
  opacity: 0.7;
  transition: opacity 0.3s ease;
}

